# isurus

./: Makefile  README.rst  README.rst.fstr  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  isurus.rst  make.bat  modules.rst  requirements.txt  usage.rst
isurus/: __init__.py  isurus.py
tests/: __init__.py  test_isurus.py
